syntax = "proto3";

option csharp_namespace = "EchoService";

package echo;


service Echoer {
  rpc Echo (EchoRequest) returns (EchoReply);
}

message EchoRequest {
  string name = 1;
}

message EchoReply {
  string message = 1;
}
